--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -16,8 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^7.0.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.4",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
