--- a/projects/client/.env.development
+++ b/projects/client/.env.development
@@ -1,3 +1,4 @@
 PORT=3000
 REACT_APP_API_BASE_URL=http://localhost:8000/api
-REACT_APP_KEY='012f72400bdb4e96af3b158db5a9ab0a'
+REACT_APP_KEY='6b71c4951c33415dad1139cfca0d1d8a'
+# REACT_APP_KEY='012f72400bdb4e96af3b158db5a9ab0a'
