--- a/projects/server/package.json
+++ b/projects/server/package.json
@@ -13,9 +13,10 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
