--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -13,11 +13,13 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/montserrat": "^5.0.13",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chart.js": "^4.4.0",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.2",
     "google-map-react": "^2.2.1",
