Improvement and bug fixing (#58)
* waiting for payment confirmation

add function to reject or approve payment receipt

* minor changes

* payment confirmation, transaction, and store page

add function for approve or reject user payment proof. update stock history after checkout and cancel order. create content for store page

* contact page

* contact and about

modify the structure of component in contact page. create about page.

* create FAQ page and its content

* category and address

change category display to scrollable. modify edit address form

* minor changes

* fix voucher bug

* styling

use font from theme. make title menu style on branch admin dashboard similar.

* styling and add some page

styling for home dashboard for super and branch admin. add terms and conditions, privacy and policy

* minor changes

* minor changes

--- a/projects/client/.env.production
+++ b/projects/client/.env.production
@@ -1,4 +1,7 @@
-PORT=3000
-REACT_APP_API_BASE_URL=http://monorepo.purwadhikabootcamp.com/api
-REACT_APP_KEY=`6b71c4951c33415dad1139cfca0d1d8a`
+PORT=3001
+REACT_APP_API_BASE_URL=https://jcwd011001.purwadhikabootcamp.com/api
+REACT_APP_IMAGE_URL=https://jcwd011001.purwadhikabootcamp.com
+REACT_APP_KEY='6b71c4951c33415dad1139cfca0d1d8a'
+# REACT_APP_KEY='244a31c78c0140db9210745b4ddf032a'
+REACT_APP_RO_KEY="f2e22fc0b7d273fcb153e6e360e13f54"
 # REACT_APP_KEY='012f72400bdb4e96af3b158db5a9ab0a'
